<resources>
    <string name="app_name">PatheApp</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_button">Login</string>
    <string name="login_no_account">No account?</string>
    <string name="login_as_guest">Continue as guest?</string>

    <string name="main_filters">Filters</string>
    <string name="main_search_movie">Search movie:</string>
    <string name="main_movie_title">Movie title</string>
    <string name="main_search">Search</string>
    <string name="main_genres" translatable="false">Genres</string>
    <string name="main_minimal_rating">Minimal rating</string>
    <string name="main_sort">Sort</string>
    <string name="main_name">Name</string>
    <string name="main_date">Date</string>
    <string name="main_rating">Rating</string>
    <string name="main_descending">Descending</string>
    <string name="main_filter" translatable="false">Filter</string>

    <string name="detail_reviews">Reviews</string>
    <string name="detail_rating">Rating:</string>

    <string name="movierating">movieRating</string>
    <string name="reviewdescription">Username</string>
    <string name="submit">Submit</string>
    <string name="moviebanner">movieBanner</string>
    <string name="movieDuration">duration</string>
    <string name="movieGenre">genre</string>
    <string name="userName">user</string>
    <string name="listnamehere">ListNameHere</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="movie_poster">Movie poster</string>
    <string name="rating">Rating:</string>
    <string name="movieratingtext">r</string>
</resources>